<resources>
    <string name="app_name">prckish</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_contact_number">Enter your contact number</string>

    <string name="create_password">Create password</string>
    <string name="confirm_password">confirm password</string>
    <string name="submit">Submit</string>
    <string name="sign_in">sign in</string>
    <string name="already_register">Already Register ?</string>
    <string name="login_now">Login Now</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_up"><![CDATA[sign up->]]></string>
    <string name="password">password</string>
    <string name="email_address">Email address</string>
    <string name="enter_email">Enter Email</string>
    <string name="fields">Fields</string>
    <string name="aptitude_test">Aptitude Test</string>
    <string name="logout">logout</string>





    <string name="menu_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="title_activity_result">Results!!!</string>

    <string name="settings_menu_item">Settings</string>
</resources>
